--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/LucasGChaves/pds#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
-    "objection": "^3.1.4"
+    "objection": "^3.1.4",
+    "passport": "^0.7.0"
   }
 }
