--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-mask-text": "^0.14.2",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
