--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,10 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-query": "^3.39.3",
     "styled-components": "^6.1.8",
-    "typescript": "~5.3.3",
-    "react-native-svg": "15.2.0"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
