--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-native-element-dropdown": "^2.12.0",
     "react-native-mask-text": "^0.14.2",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-dates": "^0.22.11",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
