--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "pockpet",
   "version": "1.0.0",
   "description": "<ol>\r   <li>Cadastrar pets</li>\r   <li>Cadastrar perfil como tutor de pet</li>\r   <li>Cadastrar perfil como veterinário/clínica veterinária</li>\r   <li>Cadastrar pets</li>\r   <li>Adicionar vacinas tomadas</li>\r   <li>Checar vacinas a serem tomadas</li>\r   <li>Consultar veterinários cadastrados no sistema</li>\r   <li>Consultar patologias de acordo com sintomatologia</li>\r </ol>",
-  "main": "index.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx tsx src/server.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,20 @@
   },
   "homepage": "https://github.com/LucasGChaves/pds#readme",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/knex": "^0.16.1",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "express-async-errors": "^3.1.1",
+    "express-passport-logout": "^0.1.0",
+    "express-validator": "^7.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
@@ -27,6 +40,13 @@
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "objection": "^3.1.4",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "tsx": "^4.15.7"
   }
 }
