feat: armazenamento das fotos

--- a/client/app.json
+++ b/client/app.json
@@ -27,6 +27,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "O aplicativo pode acessar suas fotos para adicioná-las no seu perfil/pet."
+        }
+      ]
+    ]
   }
 }
