--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,9 @@
     "react-native-svg": "15.2.0",
     "react-query": "^3.39.3",
     "styled-components": "^6.1.8",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
