--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.79",
     "axios": "^1.6.8",
-    "expo": "^51.0.14",
+    "expo": "^51.0.17",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.6",
     "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -30,9 +32,7 @@
     "react-native-svg": "15.2.0",
     "react-query": "^3.39.3",
     "styled-components": "^6.1.8",
-    "typescript": "~5.3.3",
-    "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.6"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
